# Candy-Pile

./: AGENTS.md  Cargo.template.toml  Cargo.toml  README.md
attrio/: Cargo.toml  README.md
attrio/src/: lib.rs
declerror/: Cargo.toml  README.md
declerror/docs/: HOW.md
declerror/src/: lib.rs
declerror/tests/: integration_test.rs
doc-error/: Cargo.toml  README.md
doc-error/src/: lib.rs
doc-error/tests/: integration_test.rs
docs/agents/: domain.md
downgrade/: Cargo.toml  README.md
downgrade/src/: lib.rs
macro_rules_attr/: Cargo.toml  README.md
macro_rules_attr/src/: lib.rs
macro_rules_attr/tests/: integration_test.rs
optfield-lite/: Cargo.toml  README.md
optfield-lite/src/: lib.rs
option-chain/: Cargo.toml
option-chain/src/: lib.rs
should_match/: Cargo.toml  README.md
should_match/src/: lib.rs
