[workspace]
resolver = "2"
members = [ "attrio", "macro_rules_attr", "optfield-lite", "option-chain", "should_match" ]

[workspace.package]
edition = "2024"
include = ["/src", "README.md"]
repository = "https://github.com/PRO-2684/Candy-Pile"
license = "MIT"
authors = ["PRO-2684"]

[workspace.dependencies]
macro_rules_attr = { path = "./macro_rules_attr", version = "0.1.2" }
