[package]
name = "attrio"
version = "0.1.0"
readme = "README.md"
description = "A tiny library for easily generating macros that annotate items with given attributes."
keywords = ["macro", "attribute", "decorator", "macro_rules", "no-std"]
categories = ["rust-patterns", "development-tools", "no-std"]
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
macro_rules_attr = { path = "../macro_rules_attr", version = "0.1.2" }
