[package]
name = "declerror"
version = "0.1.1"
readme = "README.md"
description = "Declarative macros to \"derive\" Error."
keywords = ["macro", "no-std", "error"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "no-std"]
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
macro_rules_attr.workspace = true
