[package]
name = "downgrade"
version = "0.1.0"
readme = "README.md"
description = "Downgrade a mutable reference to an immutable one."
keywords = ["reference", "mutable", "immutable", "downgrade", "borrow"]
categories = ["rust-patterns", "no-std"]
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
