[package]
name = "optfield-lite"
version = "0.1.0"
readme = "README.md"
description = "A macro to generate a new struct with fields wrapped in Option."
keywords = ["macro", "attribute", "decorator", "macro_rules", "proc-macro"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "no-std"]
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
macro_rules_attr = { path = "../macro_rules_attr", version = "0.1.2" }
