[package]
name = "option-chain"
version = "0.1.2"
readme = "README.md"
description = "A macro for using `?` operator in functions that don't return `Option`."
keywords = ["option", "chain", "macro", "no-std"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers", "no-std"]
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
