[package]
name = "should_match"
version = "0.1.1"
readme = "README.md"
description = "Pass a test if the output matches a pattern."
keywords = ["macro", "testing", "no-std"]
categories = ["rust-patterns", "development-tools::testing", "no-std"]
edition.workspace = true
include.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
macro_rules_attr = { path = "../macro_rules_attr", version = "0.1.2" }
